testsuite/tests/overloadedrecflds/should_fail/DRFPartialFields.stderr

DRFPartialFields.hs:4:17: error: [-Wpartial-fields, -Werror=partial-fields]
    Use of partial record field selector: ‘foo’
